--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "linkedin-jobs-api",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "qs": "^6.11.0"
   }
 }
